# Sistema_Crud_API_PIBIC/src/main/java/com/SistemaApiCrud/SistemaCrud/DTO/usuario_response_DTO.java
@@ -20,4 +20,8 @@ public class usuario_response_DTO {
     private PapelUsuario role;
 
     private Boolean ativo;
+
+    private Long idAluno;
+
+    private Long idProfessor;
 }
